added validation to all pages

--- a/src/main/resources/static/editEmployee.html
+++ b/src/main/resources/static/editEmployee.html
@@ -15,16 +15,11 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <form class="item active login-form" name="employeeForm">
-                                <h3 align="center"><strong>Add employee</strong></h3>
-
-                                <div class="alert alert-success alert-dismissable">
-                                    <a href="" class="close" ></a>
-                                    <strong>Success!</strong> You have successfully added new employee
-                                </div>
+                                <h3 align="center"><strong>Edit employee</strong></h3>
 
                                 <div class="alert alert-danger alert-dismissable">
                                     <a href="" class="close"></a>
-                                    <strong>Warning!</strong> Failed to add new employee
+                                    <strong>Warning!</strong> Failed to edit new employee
                                 </div>
 
                                 <!--FIRST NAME-->
@@ -86,8 +81,8 @@
                                 <button href="#carousel-example-generic" class="btn btn-default" data-slide="prev">Previous
                                 </button>
                                 <button href="#carousel-example-generic" class="btn btn-primary" data-slide="next"
-                                        ng-click="controller.addEmployee()">
-                                    Add employee
+                                        ng-click="controller.editEmployee()">
+                                    Edit employee
                                 </button>
                             </div>
                         </div>
