--- a/src/main/resources/static/employeeTree.html
+++ b/src/main/resources/static/employeeTree.html
@@ -22,7 +22,7 @@
             <!-- dialog body -->
             <div class="modal-body">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                Are you sure you want to delete this employee?
+                Are you sure you want to unassign subordinates of this employee?
             </div>
             <!-- dialog buttons -->
             <div class="modal-footer">
@@ -42,6 +42,26 @@
                 <div class="form-top">
                     <h3 align="center"><strong>Employee tree</strong></h3>
 
+                    <div class="alert alert-success fade in" ng-show="deleted">
+                        <a class="close" ng-click="deleted=false">&times;</a> <strong>Success!</strong>
+                        Employee deleted
+                    </div>
+
+                    <div class="alert alert-success fade in" ng-show="deleted">
+                        <a class="close" ng-click="deleted=false">&times;</a> <strong>Error!</strong>
+                        Employee not deleted
+                    </div>
+
+                    <div class="alert alert-success fade in" ng-show="unassigned">
+                        <a class="close" ng-click="deleted=false">&times;</a> <strong>Success!</strong>
+                        Employee subordinates unassigned
+                    </div>
+
+                    <div class="alert alert-success fade in" ng-show="unassigned">
+                        <a class="close" ng-click="deleted=false">&times;</a> <strong>Error!</strong>
+                        Employee subordinates not unassigned
+                    </div>
+
                     <ul class="list-group"><li class="list-group-item"  ng-repeat="data in tree" ng-include="'employee_tree.html'"></ul>
                 </div>
             </div>
@@ -52,9 +72,10 @@
 <script type="text/ng-template"  id="employee_tree.html">
     {{data.lastName+' '+data.firstName+' '}}
     {{data.dateOfEmployment | date: "dd-MM-y"}}
-    <button ng-click="addEmployee(data)" class="btn btn-default btn-xs">Add employee</button>
+    <button ng-click="editEmployee(data)" class="btn btn-default btn-xs">Edit employee</button>
+    <button ng-click="addSubordinate(data)" class="btn btn-default btn-xs">Add subordinate</button>
     <button ng-click="markEmployeeToDelete(data)" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#deleteEmployeeModal">Delete employee</button>
-    <button ng-click="markSubordinatesToDelete(data)" ng-show="data.subordinate.length > 0" class="btn btn-danger btn-xs">Unassign all subordinates</button>
+    <button ng-click="markSubordinatesToDelete(data)" ng-show="data.subordinate.length > 0" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#unassignAllSubordinatesModal">Unassign all subordinates</button>
     <ul>
         <li class="row" ng-repeat="data in data.subordinate" ng-include="'employee_tree.html'"></li>
     </ul>
