added employee services

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,6 +60,7 @@
 <script src="js/controller/employeeTreeController.js"></script>
 <script src="js/controller/navigationController.js"></script>
 
-
+<script src="js/helper/globalUrl.js"></script>
+<script src="js/service/employeeService.js"></script>
 </body>
 </html>
