--- a/src/main/resources/static/addEmployee.html
+++ b/src/main/resources/static/addEmployee.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="form-firstName">First name</label>
-                                    <input type="text" name="firstName" placeholder="First name..." class="form-username form-control" id="form-firstName" ng-model="controller.employee.firstName" ng-maxlength="30" required>
+                                    <input type="text" name="firstName" placeholder="First name..." class="form-username form-control" id="form-firstName" ng-model="employee.firstName" ng-maxlength="30" required>
                                 </div>
 
                                 <!--LAST NAME-->
@@ -52,7 +52,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="form-lastName">Last name</label>
-                                    <input type="text" name="lastName" placeholder="Last name..." class="form-username form-control" id="form-lastName" ng-model="controller.employee.lastName" ng-maxlength="50" required>
+                                    <input type="text" name="lastName" placeholder="Last name..." class="form-username form-control" id="form-lastName" ng-model="employee.lastName" ng-maxlength="50" required>
                                 </div>
 
                                 <div ng-show="employeeForm.dateOfEmployment.$touched && employeeForm.dateOfEmployment.$error.required" class="alert alert-danger alert-dismissable">
@@ -67,7 +67,7 @@
 
                                 <div class="form-group">
                                     <label for="form-dateOfEmployment">Date of employment</label>
-                                    <input type="date" name="dateOfEmployment" placeholder="Date of employment..." class="form-username form-control" id="form-dateOfEmployment" ng-model="controller.employee.dateOfEmployment" required>
+                                    <input type="date" name="dateOfEmployment" placeholder="Date of employment..." class="form-username form-control" id="form-dateOfEmployment" ng-model="employee.dateOfEmployment" required>
                                 </div>
 
                                 <button ng-disabled="employeeForm.$invalid" href="#carousel-example-generic" class="btn btn-default" data-slide="next">Next</button>
