--- a/src/main/resources/static/editEmployee.html
+++ b/src/main/resources/static/editEmployee.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="form-firstName">First name</label>
-                                    <input type="text" name="firstName" placeholder="First name..." class="form-username form-control" id="form-firstName" ng-model="controller.employee.firstName" ng-maxlength="30" required>
+                                    <input type="text" name="firstName" placeholder="First name..." class="form-username form-control" id="form-firstName" ng-model="employee.firstName" ng-maxlength="30" required>
                                 </div>
 
                                 <!--LAST NAME-->
@@ -52,7 +52,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="form-lastName">Last name</label>
-                                    <input type="text" name="lastName" placeholder="Last name..." class="form-username form-control" id="form-lastName" ng-model="controller.employee.lastName" ng-maxlength="50" required>
+                                    <input type="text" name="lastName" placeholder="Last name..." class="form-username form-control" id="form-lastName" ng-model="employee.lastName" ng-maxlength="50" required>
                                 </div>
 
                                 <div ng-show="employeeForm.dateOfEmployment.$touched && employeeForm.dateOfEmployment.$error.required" class="alert alert-danger alert-dismissable">
@@ -67,7 +67,7 @@
 
                                 <div class="form-group">
                                     <label for="form-dateOfEmployment">Date of employment</label>
-                                    <input type="date" name="dateOfEmployment" placeholder="Date of employment..." class="form-username form-control" id="form-dateOfEmployment" ng-model="controller.employee.dateOfEmployment" required>
+                                    <input type="date" name="dateOfEmployment" placeholder="Date of employment..." class="form-username form-control" id="form-dateOfEmployment" ng-model="employee.dateOfEmployment" required>
                                 </div>
 
                                 <button ng-disabled="employeeForm.$invalid" href="#carousel-example-generic" class="btn btn-default" data-slide="next">Next</button>
@@ -78,15 +78,15 @@
                                 <h3 align="center"><strong>Assign employee</strong></h3>
 
                                 <div class="form-group">
-                                    <button class="btn btn-default" ng-click="controller.employee.leader=null">Unassign leader</button>
+                                    <button class="btn btn-default" ng-click="employee.leader.employeeId=null">Unassign leader</button>
                                 </div>
 
-                                <ul class="list-group"><li class="list-group-item"  ng-repeat="data in controller.tree" ng-include="'assign_leader_tree.html'"></ul>
+                                <ul class="list-group"><li class="list-group-item"  ng-repeat="data in tree" ng-include="'assign_leader_tree.html'"></ul>
 
                                 <button href="#carousel-example-generic" class="btn btn-default" data-slide="prev">Previous
                                 </button>
                                 <button href="#carousel-example-generic" class="btn btn-primary" data-slide="next"
-                                        ng-click="controller.editEmployee()">
+                                        ng-click="editEmployee()">
                                     Edit employee
                                 </button>
                             </div>
@@ -102,7 +102,7 @@
     {{data.lastName+' '+data.firstName+' '}}
     {{data.dateOfEmployment | date: "dd-MM-y"}}
     <label>
-        <input name="radio" type="radio" ng-model="controller.employee.leader.leaderId" ng-value="data.employeeId"> Assign
+        <input name="radio" type="radio" ng-model="employee.leader.employeeId" ng-value="data.employeeId"> Assign
     </label>
     <ul ng-show="initialLeaderId!==data.employeeId">
         <li class="row" ng-repeat="data in data.subordinate" ng-include="'assign_leader_tree.html'"></li>
