--- a/src/main/resources/static/employeeTree.html
+++ b/src/main/resources/static/employeeTree.html
@@ -38,11 +38,11 @@
     <div class="container">
         <div class="row form-box">
             <div class="col-sm-10 col-sm-offset-1 ">
-                <div ng-show="controller.treeLoadingSuccess===false" class="alert alert-danger alert-dismissable">
+                <div ng-show="treeLoadingSuccess===false" class="alert alert-danger alert-dismissable">
                     <a href="" class="close"></a>
                     <strong>Warning!</strong> Failed to load employee tree
                 </div>
-                <div ng-show="controller.treeLoadingSuccess===null || controller.treeLoadingSuccess===true" class="form-top">
+                <div ng-show="treeLoadingSuccess===null || treeLoadingSuccess===true" class="form-top">
                     <h3 align="center"><strong>Employee tree</strong></h3>
 
                     <div class="alert alert-success fade in" ng-show="deleted===true">
@@ -77,7 +77,6 @@
     {{data.lastName+' '+data.firstName+' '}}
     {{data.dateOfEmployment | date: "dd-MM-y"}}
     <button ng-click="editEmployee(data)" class="btn btn-default btn-xs">Edit employee</button>
-    <!--<button ng-click="addSubordinate(data)" class="btn btn-default btn-xs">Add subordinate</button>-->
     <button ng-click="markEmployeeToDelete(data)" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#deleteEmployeeModal">Delete employee</button>
     <button ng-click="markSubordinatesToUnassign(data)" ng-show="data.subordinate.length > 0" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#unassignAllSubordinatesModal">Unassign all subordinates</button>
     <ul>
